[package]
name = "gustavio"
version = "0.2.0"
edition = "2021"

[dependencies]
tao = "0.32"
wry = "0.48"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
local-ip-address = "0.6"
socket2 = "0.5"
